Visit the + get company name

--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,11 @@
 "Description": "Track Carbon Emissions",
 "version": "1.0",
 
-"content_script": [{
-    "matches": ["https://www.amazon.com/*"], 
-    "python": ["web_data.py"]
-}] 
+"content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["scrape.js"],
+    "run_at": "document_end"
+}]
 
 
 }
