--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 
 "content_scripts": [{
     "matches": ["<all_urls>"],
-    "js": ["scrape.js"],
+    "js": ["scrapeAmazon.js"],
     "run_at": "document_end"
 }]
 
