--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 
 "content_scripts": [{
     "matches": ["<all_urls>"],
-    "js": ["estimateCO2.js"],
+    "js": ["Scrapers/scrapeAmazon.js", "estimateCO2.js"],
     "run_at": "document_end"
 }]
 
